topbar and drawer z-index fix

--- a/styles/common.css
+++ b/styles/common.css
@@ -16,6 +16,7 @@ body {
   /* font-family: "Fira Code", monospace; */
   font-family: "Inter";
   background-color: var(--editor-background);
+  position: relative;
 }
 
 .btn_primary {
